lang/tests/contract/common/ui/fail/41-invalid-param-type-in-interface.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Input_Type` is not satisfied
 --> $DIR/41-invalid-param-type-in-interface.rs:6:9
  |
6 |         fn bar(&self, _f: f32);
  |         ^^^^^^^^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Input_Type` is not implemented for `f32`
